--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: c
 compiler: gcc
 before_install:
   - sudo add-apt-repository ppa:grilo-team/ppa -y
+  - sudo add-apt-repository "deb mirror://mirrors.ubuntu.com/mirrors.txt trusty main restricted universe multiverse" -y
   - sudo apt-get update -qq
   - sudo apt-get install -qq gnome-common gtk-doc-tools libglib2.0-dev
          libxml2-dev libgtk-3-dev liboauth-dev libsoup2.4-dev valac
