--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
   - sudo apt-get update -qq
   - sudo apt-get install -qq gnome-common gtk-doc-tools libglib2.0-dev
          libxml2-dev libgtk-3-dev liboauth-dev libsoup2.4-dev valac
-         gobject-introspection libgirepository1.0-dev
+         gobject-introspection libgirepository1.0-dev zlib1g-dev
 script:
   - ./autogen.sh
   - make
