--- a/configure.ac
+++ b/configure.ac
@@ -18,7 +18,7 @@ AC_INIT([prj_name],
         [prj_name],
         [https://wiki.gnome.org/Projects/Grilo])
 
-AM_INIT_AUTOMAKE([foreign])
+AM_INIT_AUTOMAKE([foreign subdir-objects])
 
 AC_CONFIG_MACRO_DIR([m4])
 AC_CONFIG_SRCDIR([src/grilo.h])
