build: remove "INCLUDES" from Makefile.am
Deprecated option.

--- a/tools/grilo-launch/Makefile.am
+++ b/tools/grilo-launch/Makefile.am
@@ -5,8 +5,6 @@
 #
 # Copyright (C) 2014 Igalia S.L.
 
-INCLUDES = $(DEPS_CFLAGS)
-
 bin_PROGRAMS =       \
    grl-launch-@GRL_MAJORMINOR@
 
@@ -14,6 +12,7 @@ grl_launch_@GRL_MAJORMINOR@_SOURCES =  \
    grl-launch.c
 
 grl_launch_@GRL_MAJORMINOR@_CFLAGS =   \
+   $(DEPS_CFLAGS)   	                  \
    -DPREFIX=$(prefix)                  \
    -I$(top_srcdir)/src                 \
    -I$(top_srcdir)/src/data
