--- a/bindings/vala/Makefile.am
+++ b/bindings/vala/Makefile.am
@@ -1,78 +1,29 @@
-# This Makefile is a tad convoluted. I've tried to make it so that the vapi
-# can be built at the same time as the library in the hope that this will make
-# it easier to keep it up-to-date.
-#
-# The vapi is generated in 2 steps:
-#
-#   vala-gen-introspect looks at headers and libs and generates a gidl for the
-#   library. It takes a .files file containing paths to these. It also takes a
-#   .namespace file containing the Vala namespace corresponding to this
-#   library. Both these files are expected to be in the directory where you run
-#   vala-gen-introspect.
-#
-#   vapigen takes the gidl, a .deps file containing the list of libs needed
-#   to link this library, and a .metadata file containing annotations to the
-#   gidl (e.g. foo() is the free function for object X).
-#
-# vala-gen-introspect runs with the -uninstalled .pc file. The .files is
-# generated so that it has links to the headers and libraries from the source
-# and build trees. The .namespace file is generated, though it doesn't need
-# to be, so that it exists in the build tree where vala-gen-introspect is run
-# (because this may not be the same as the source tree). Since we're working
-# with the -uninstalled files, and vala-gen-introspect assumes filenames are
-# named as <package>.<extension>, all the associated file names have an
-# -uninstalled suffix.
-#
-# Running vapigen is simpler. It generates a the .vapi file using the gidl
-# file from vala-gen-introspect. Since we want the final files to be in the
-# form <libname>-<version>.*, we use the same convention for naming the files
-# associated with this step (contrast with the -uninstalled suffix for the
-# vala-gen-introspect step). The only file implicitly used by vapigen is the
-# .deps file, so to make the build independent of a split source/build tree,
-# I've put the deps on the vapigen command-line (it's redundant, but helps
-# with distcheck).
-#
+EXTRA_DIST =
 
-targets = grilo-@GRL_MAJORMINOR@
+if ENABLE_VAPIGEN
+-include $(VAPIGEN_MAKEFILE)
 
-if BUILD_GRILO_NET
-targets += grilo-net-@GRL_MAJORMINOR@
-endif
+VAPIGEN_VAPIS = grilo-@GRL_MAJORMINOR@.vapi grilo-net-@GRL_MAJORMINOR@.vapi
 
-targets_u = $(foreach target,$(targets),$(subst @GRL_MAJORMINOR@,uninstalled,$(target)))
+grilo-@GRL_MAJORMINOR@.vapi: $(top_builddir)/src/Grl-@GRL_MAJORMINOR@.gir grilo-@GRL_MAJORMINOR@-custom.vala grilo-@GRL_MAJORMINOR@.deps Grl-@GRL_MAJORMINOR@.metadata
 
-# "source" files for vala-gen-introspect
-filesfiles_src = $(foreach target,$(targets_u),$(target).files.in)
-filesfiles = $(foreach target,$(targets_u),$(target).files)
-nsfiles_src = $(foreach target,$(targets_u),$(target).namespace.in)
-nsfiles = $(foreach target,$(targets_u),$(target).namespace)
+grilo_@GRL_MAJORMINOR_NORM@_vapi_DEPS =
+grilo_@GRL_MAJORMINOR_NORM@_vapi_METADATADIRS = $(srcdir)
+grilo_@GRL_MAJORMINOR_NORM@_vapi_FILES = grilo-@GRL_MAJORMINOR@-custom.vala $(top_builddir)/src/Grl-@GRL_MAJORMINOR@.gir
 
-# "source" files for vapigen
-depsfiles = $(foreach target,$(targets),$(target).deps)
-gifiles = $(foreach target,$(targets),$(target).gi)
-metadatafiles = $(foreach target,$(targets),$(target).metadata)
+EXTRA_DIST += grilo-@GRL_MAJORMINOR@.metadata grilo-@GRL_MAJORMINOR@.deps grilo-@GRL_MAJORMINOR@-custom.vala
+
+grilo-net-@GRL_MAJORMINOR@.vapi:  $(top_builddir)/libs/net/GrlNet-@GRL_MAJORMINOR@.gir grilo-net-@GRL_MAJORMINOR@-custom.vala grilo-net-@GRL_MAJORMINOR@.deps GrlNet-@GRL_MAJORMINOR@.metadata
+
+grilo_net_@GRL_MAJORMINOR_NORM@_vapi_DEPS =
+grilo_net_@GRL_MAJORMINOR_NORM@_vapi_METADATADIRS = $(srcdir)
+grilo_net_@GRL_MAJORMINOR_NORM@_vapi_FILES = grilo-net-@GRL_MAJORMINOR@-custom.vala $(top_builddir)/libs/net/GrlNet-@GRL_MAJORMINOR@.gir
+
+EXTRA_DIST += GrlNet-@GRL_MAJORMINOR@.metadata grilo-net-@GRL_MAJORMINOR@.deps grilo-net-@GRL_MAJORMINOR@-custom.vala
 
 vapidir = $(datadir)/vala/vapi
+vapi_DATA = $(VAPIGEN_VAPIS) $(VAPIGEN_VAPIS:.vapi=.deps)
 
-if HAVE_VALA
-vapifiles = $(foreach target,$(targets),$(target).vapi)
-vapi_DATA = $(depsfiles) $(vapifiles)
 endif
-
-%-@GRL_MAJORMINOR@.gi: %-uninstalled.files %-uninstalled.namespace
-	PKG_CONFIG_PATH=$(top_builddir)/:${PKG_CONFIG_PATH} \
-		$(VALA_GEN_INTROSPECT) $*-uninstalled .
-	@mv $*-uninstalled.gi $*-@GRL_MAJORMINOR@.gi
-
-%.vapi: %.gi %.metadata %-custom.vala
-	$(VAPIGEN) --library $* \
-		$(top_srcdir)/bindings/vala/$*.metadata $*.gi \
-		$*-custom.vala
-
-all: $(vapifiles)
-
-EXTRA_DIST = $(depsfiles) $(filesfiles_src) $(nsfiles_src) $(metadatafiles) $(vapifiles)
-CLEANFILES = $(gifiles)
-DISTCLEANFILES = $(vapifiles) $(filesfiles) $(nsfiles)
 
 -include $(top_srcdir)/git.mk
