core: define C include for GIR
https://bugzilla.gnome.org/show_bug.cgi?id=740186

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -143,6 +143,7 @@ Grl_@GRL_MAJORMINOR_NORM@_gir_INCLUDES = GObject-2.0 GModule-2.0 Gio-2.0
 Grl_@GRL_MAJORMINOR_NORM@_gir_CFLAGS = $(lib@GRL_NAME@_la_CFLAGS)
 Grl_@GRL_MAJORMINOR_NORM@_gir_LIBS = lib@GRL_NAME@.la
 Grl_@GRL_MAJORMINOR_NORM@_gir_FILES = $(introspection_sources)
+Grl_@GRL_MAJORMINOR_NORM@_gir_SCANNERFLAGS = --c-include="grilo.h"
 INTROSPECTION_GIRS += Grl-@GRL_MAJORMINOR@.gir
 
 girdir = @INTROSPECTION_GIRDIR@
