--- a/tests/python/Makefile.am
+++ b/tests/python/Makefile.am
@@ -12,8 +12,7 @@ if HAVE_INTROSPECTION
 EXTRA_DIST = \
 	testrunner.py \
 	test_registry.py \
-	test_plugin.py \
-	test_metadata_source.py
+	test_plugin.py
 endif
 
 .PHONY: test test-report perf-report full-report
