core: Add a Makefile.am in src/data
To have a gitignore generated there as well.

https://bugzilla.gnome.org/show_bug.cgi?id=748455

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,6 +5,8 @@
 #
 # Copyright (C) 2010, 2011 Igalia S.L. All rights reserved.
 
+SUBDIRS = data
+
 BUILT_SOURCES = \
 	grl-marshal.h \
 	grl-marshal.c \
