introspection: Install to the correct places
make distcheck was failing on my end, because it sets a prefix
which has to be taken into account, this fixes that issue
as shown in the example in:

/usr/share/gobject-introspection-1.0/Makefile.introspection

https://bugzilla.gnome.org/show_bug.cgi?id=749587

--- a/libs/pls/Makefile.am
+++ b/libs/pls/Makefile.am
@@ -62,10 +62,10 @@ GrlPls_@GRL_MAJORMINOR_NORM@_gir_LIBS = libgrlpls-@GRL_MAJORMINOR@.la \
 GrlPls_@GRL_MAJORMINOR_NORM@_gir_FILES = $(introspection_sources)
 INTROSPECTION_GIRS += GrlPls-@GRL_MAJORMINOR@.gir
 
-girdir = @INTROSPECTION_GIRDIR@
+girdir = $(datadir)/gir-1.0
 gir_DATA = $(INTROSPECTION_GIRS)
 
-typelibdir = @INTROSPECTION_TYPELIBDIR@
+typelibdir = $(libdir)/girepository-1.0/
 typelib_DATA = $(INTROSPECTION_GIRS:.gir=.typelib)
 
 CLEANFILES += $(dist_gir_DATA) $(typelib_DATA)
