--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -146,10 +146,10 @@ Grl_@GRL_MAJORMINOR_NORM@_gir_FILES = $(introspection_sources)
 Grl_@GRL_MAJORMINOR_NORM@_gir_SCANNERFLAGS = --c-include="grilo.h"
 INTROSPECTION_GIRS += Grl-@GRL_MAJORMINOR@.gir
 
-girdir = @INTROSPECTION_GIRDIR@
+girdir = $(datadir)/gir-1.0
 gir_DATA = $(INTROSPECTION_GIRS)
 
-typelibdir = @INTROSPECTION_TYPELIBDIR@
+typelibdir = $(libdir)/girepository-1.0/
 typelib_DATA = $(INTROSPECTION_GIRS:.gir=.typelib)
 
 CLEANFILES += $(dist_gir_DATA) $(typelib_DATA)
