--- a/configure.ac
+++ b/configure.ac
@@ -240,7 +240,7 @@ AC_ARG_ENABLE([tests],
         AS_HELP_STRING([--enable-tests],[build unit tests]),
         enable_tests=yes)
 
-AM_CONDITIONAL(ENABLE_TESTS, test "enable_tests" = "xyes")
+AM_CONDITIONAL(ENABLE_TESTS, test "x$enable_tests" = "xyes")
 
 # ----------------------------------------------------------
 # GTK-DOC
