build: Also bump grl-net and grl-pls to 0.3
Turns out that grilo-plugins expects grl-net and grl-pls to be the same
version as grilo itself, which is likely what a number of applications
also do.

This is easier to deal with than versions changing, and matches what
GLib does for example.

This also fixes a number of lingering references to 0.2 as the major
version number.

--- a/grilo-pls-0.3.pc.in
+++ b/grilo-pls-0.3.pc.in
@@ -7,9 +7,9 @@ datadir=${datarootdir}
 girdir=@INTROSPECTION_GIRDIR@
 typelibdir=@INTROSPECTION_TYPELIBDIR@
 
-Name: Grilo networking library
-Description: Grilo networking helpers for plug-ins
+Name: Grilo playlist library
+Description: Grilo playlist utility
 Requires: @GRL_NAME@
-Version: @GRLNET_VERSION@
-Libs: -L${libdir} -lgrlnet-0.2
+Version: @GRLPLS_VERSION@
+Libs: -L${libdir} -lgrlpls-0.3
 Cflags: -I${includedir}
