--- a/configure.ac
+++ b/configure.ac
@@ -40,13 +40,13 @@ m4_ifdef([AM_SILENT_RULES], [AM_SILENT_RULES([yes])])
 
 # Grilo Net library
 
-GRLNET_VERSION=0.2.5
+GRLNET_VERSION=grl_major_version.grl_minor_version.grl_micro_version
 AC_SUBST(GRLNET_VERSION)
 AC_DEFINE_UNQUOTED(GRLNET_VERSION, "$GRLNET_VERSION", [Grilo Net library version])
 
 # Grilo Pls library
 
-GRLPLS_VERSION=0.2.2
+GRLPLS_VERSION=grl_major_version.grl_minor_version.grl_micro_version
 AC_SUBST(GRLPLS_VERSION)
 AC_DEFINE_UNQUOTED(GRLPLS_VERSION, "$GRLPLS_VERSION", [Grilo Pls library version])
 
@@ -58,8 +58,8 @@ AC_DEFINE_UNQUOTED(GRLPLS_VERSION, "$GRLPLS_VERSION", [Grilo Pls library version
 # see http://www.gnu.org/software/libtool/manual/html_node/Libtool-versioning.html
 
 GRL_LT_VERSION=10:0:0
-GRLNET_LT_VERSION=1:9:1
-GRLPLS_LT_VERSION=0:4:0
+GRLNET_LT_VERSION=2:0:0
+GRLPLS_LT_VERSION=1:0:0
 
 AC_SUBST([GRL_LT_VERSION])
 AC_SUBST([GRLNET_LT_VERSION])
@@ -276,17 +276,17 @@ AC_SUBST([builddir])
 # ----------------------------------------------------------
 
 if test "x$HAVE_LIBSOUP" = "xyes"; then
-   AC_CONFIG_FILES([grilo-net-uninstalled.pc grilo-net-0.2.pc])
+   AC_CONFIG_FILES([grilo-net-uninstalled.pc grilo-net-$GRL_MAJORMINOR.pc])
 fi
 
 if test "x$HAVE_TOTEM_PL_PARSER" = "xyes"; then
-   AC_CONFIG_FILES([grilo-pls-uninstalled.pc grilo-pls-0.2.pc])
+   AC_CONFIG_FILES([grilo-pls-uninstalled.pc grilo-pls-$GRL_MAJORMINOR.pc])
 fi
 
 AC_CONFIG_FILES([
   Makefile
   grilo-uninstalled.pc
-  grilo-0.3.pc
+  grilo-$GRL_MAJORMINOR.pc
   src/Makefile
   src/data/Makefile
   po/Makefile.in
