--- a/grilo-net-0.3.pc.in
+++ b/grilo-net-0.3.pc.in
@@ -7,9 +7,9 @@ datadir=${datarootdir}
 girdir=@INTROSPECTION_GIRDIR@
 typelibdir=@INTROSPECTION_TYPELIBDIR@
 
-Name: Grilo playlist library
-Description: Grilo playlist utility
+Name: Grilo networking library
+Description: Grilo networking helpers for plug-ins
 Requires: @GRL_NAME@
-Version: @GRLPLS_VERSION@
-Libs: -L${libdir} -lgrlpls-0.2
+Version: @GRLNET_VERSION@
+Libs: -L${libdir} -lgrlnet-0.3
 Cflags: -I${includedir}
