build: fix build due syntax error
commit 2a73d7deaad9fbdebf3441d72b aims to fix missing dependencies but
introduced syntax error.

https://bugzilla.gnome.org/show_bug.cgi?id=755516

--- a/configure.ac
+++ b/configure.ac
@@ -173,8 +173,7 @@ AC_ARG_ENABLE([grl_net],
                 [Enable Grilo Net library (default: auto)]),
         [
                 case "$enableval" in
-                     yes)
-                     auto)
+                     yes | auto)
                         if test "x$HAVE_LIBSOUP" = "xno"; then
                            AC_MSG_ERROR([libsoup-2.4 not found, install it or use --disable-grl-net])
                         fi
@@ -198,8 +197,7 @@ AC_ARG_ENABLE([grl_pls],
                 [Enable Grilo Pls library (default: auto)]),
         [
                 case "$enableval" in
-                     yes)
-                     auto)
+                     yes | auto)
                         if test "x$HAVE_TOTEM_PL_PARSER" = "xno"; then
                            AC_MSG_ERROR([totem-pl-parser not found, install it or use --disable-grl-pls])
                         fi
