vala: Don't remove .deps file on clean
Instead, they should only be removed when maintainer-clean is done.

https://bugzilla.gnome.org/show_bug.cgi?id=755368

--- a/bindings/vala/Makefile.am
+++ b/bindings/vala/Makefile.am
@@ -25,7 +25,8 @@ EXTRA_DIST += GrlNet-@GRL_MAJORMINOR@.metadata grilo-net-@GRL_MAJORMINOR@.deps g
 vapidir = $(datadir)/vala/vapi
 vapi_DATA = $(VAPIGEN_VAPIS) $(VAPIGEN_VAPIS:.vapi=.deps)
 
-CLEANFILES += $(vapi_DATA)
+CLEANFILES += $(VAPIGEN_VAPIS)
+MAINTAINERCLEANFILES = $(VAPIGEN_VAPIS:.vapi=.deps)
 
 endif
 
