core: Include type'ified header in introspection
Introspection sources need to include the type'ified enumerations
otherwise the gir-scanner won't know anything about the enumerations
listed in that header, generated with glib-mkenums.

Fix-up to commit 463d94d6022d

https://bugzilla.gnome.org/show_bug.cgi?id=774394

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -130,7 +130,8 @@ INTROSPECTION_COMPILER_ARGS = --includedir=$(srcdir) --includedir=$(srcdir)/data
 if HAVE_INTROSPECTION
 introspection_sources = \
 	$(lib@GRL_NAME@inc_HEADERS)	\
-	$(filter %.c,$(lib@GRL_NAME@_la_SOURCES))
+	$(filter %.c,$(lib@GRL_NAME@_la_SOURCES)) \
+	grl-type-builtins.h
 
 Grl-@GRL_MAJORMINOR@.gir: lib@GRL_NAME@.la
 Grl_@GRL_MAJORMINOR_NORM@_gir_INCLUDES = GObject-2.0 GModule-2.0 Gio-2.0
