--- a/doc/Makefile.am
+++ b/doc/Makefile.am
@@ -5,6 +5,10 @@
 #
 # Copyright (C) 2011 Igalia S.L. All rights reserved.
 
-SUBDIRS = grilo
+SUBDIRS = man
+
+if ENABLE_GTK_DOC
+SUBDIRS += grilo
+endif
 
 -include $(top_srcdir)/git.mk
