--- a/src/grl-type-builtins.c.template
+++ b/src/grl-type-builtins.c.template
@@ -1,10 +1,10 @@
 /*** BEGIN file-header ***/
-#include "grl-type-builtins.h"
-#include "@filename@"
+#include <grl-type-builtins.h>
 /*** END file-header ***/
 
 /*** BEGIN file-production ***/
 /* enumerations from "@filename@" */
+#include "@filename@"
 /*** END file-production ***/
 
 /*** BEGIN value-header ***/
