travis: do not push container without credentials
Avoid trying to push container to Docker Hub if no credentials have been
defined.

--- a/.travis.yml
+++ b/.travis.yml
@@ -27,7 +27,7 @@ script:
   - docker build -t grilofw/grilo:core .
   
 after_success:
-  - if [[ "$TRAVIS_BRANCH" == "master" ]]; then
+  - if [[ "$TRAVIS_BRANCH" == "master" && -n "$DOCKER_USERNAME" ]]; then
       docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD";
       docker push grilofw/grilo:core;
     fi
