--- a/.travis.yml
+++ b/.travis.yml
@@ -7,27 +7,47 @@ os: linux
 services:
   - docker
 
+env:
+  - BUILD=autotools
+  - BUILD=meson
+
 before_install:
   - docker pull grilofw/grilo:base
-  
-script:
   - echo FROM grilofw/grilo:base > Dockerfile
   - echo ADD . /root/grilo >> Dockerfile
   - echo WORKDIR /root/grilo >> Dockerfile
-  - echo RUN ./autogen.sh \
-    --prefix /usr \
-    --enable-gtk-doc
-    --enable-introspection \
-    --enable-vala \
-    --enable-test-ui \
-    --enable-grl-net \
-    --enable-grl-pls >> Dockerfile
-  - echo RUN make >> Dockerfile
-  - echo RUN make install >> Dockerfile
-  - docker build -t grilofw/grilo:core .
   
+script:
+  - if [[ "$BUILD" == "autotools" ]]; then
+     echo RUN ./autogen.sh \
+       --prefix /usr \
+       --enable-gtk-doc
+       --enable-introspection \
+       --enable-vala \
+       --enable-test-ui \
+       --enable-grl-net \
+       --enable-grl-pls >> Dockerfile;
+     echo RUN make >> Dockerfile;
+     echo RUN make install >> Dockerfile;
+     docker build -t grilofw/grilo:core .;
+    fi
+  - if [[ "$BUILD" == "meson" ]]; then
+      echo RUN meson \
+        --prefix /usr \
+        -Denable-grl-net=true \
+        -Denable-grl-pls=true \
+        -Denable-gtk-doc=true \
+        -Denable-introspection=true \
+        -Denable-test-ui=true \
+        -Denable-vala=true \
+        . build >> Dockerfile;
+      echo RUN ninja -C build >> Dockerfile;
+      echo RUN ninja -C build install >> Dockerfile;
+      docker build .;
+    fi
+
 after_success:
-  - if [[ "$TRAVIS_BRANCH" == "master" && -n "$DOCKER_USERNAME" ]]; then
+  - if [[ "$BUILD" == "autotools" && "$TRAVIS_BRANCH" == "master" && -n "$DOCKER_USERNAME" ]]; then
       docker login -u "$DOCKER_USERNAME" -p "$DOCKER_PASSWORD";
       docker push grilofw/grilo:core;
     fi
