--- a/src/meson.build
+++ b/src/meson.build
@@ -117,6 +117,7 @@ if enable_gir
         nsversion: grl_majorminor,
         identifier_prefix: 'Grl',
         symbol_prefix: 'grl',
+        dependencies: [ gobject_dep, gmodule_dep, gio_dep ],
         includes: [ 'GObject-2.0', 'GModule-2.0', 'Gio-2.0' ],
         install: true,
         extra_args: gir_extra_args)
