--- a/doc/grilo/meson.build
+++ b/doc/grilo/meson.build
@@ -11,7 +11,10 @@ types = configure_file(input : 'grilo.types',
 
 gnome.gtkdoc('grilo',
     main_sgml: 'grilo-docs.sgml',
-    src_dir: join_paths(meson.source_root(), 'src'),
+    src_dir: [
+        join_paths(meson.source_root(), 'src'),
+        join_paths(meson.source_root(), 'libs'),
+    ],
     dependencies: libgrl_dep,
     gobject_typesfile: types,
     install: true,
@@ -22,5 +25,10 @@ gnome.gtkdoc('grilo',
         'quick-start.xml',
         'writing-apps.xml',
         'overview.xml',
+        join_paths(meson.source_root(), 'examples', 'configuring-plugins.c'),
+        join_paths(meson.source_root(), 'examples', 'browsing.c'),
+        join_paths(meson.source_root(), 'examples', 'searching.c'),
+        join_paths(meson.source_root(), 'examples', 'multivalues.c'),
+        join_paths(meson.source_root(), 'examples', 'efficient-metadata-resolution.c'),
     ]
 )
