Fix build with recent Meson
Referencing the current source directory inside an include_directories()
statement is not recommended in Meson, and version 0.39, released on
March 5th, declares it an error.

--- a/src/meson.build
+++ b/src/meson.build
@@ -79,8 +79,8 @@ install_headers(grl_headers,
     subdir: grl_name)
 
 libgrl_inc = include_directories([
-    meson.current_source_dir(),
-    '@0@/data'.format(meson.current_source_dir()),
+    '.',
+    'data',
 ])
 
 c_args = [
