grl-inspect: Add Python3 support to grilo-inspect
We need to run a few commands to generate headers before compiling
grilo-inspect, make sure to support both Python2 and Python3.

--- a/tools/grilo-inspect/meson.build
+++ b/tools/grilo-inspect/meson.build
@@ -6,6 +6,9 @@
 # Copyright (C) 2016 Igalia S.L. All rights reserved.
 
 python = find_program('python')
+if not python.found()
+    python = import('python3').find_python()
+endif
 run_command(python,
     '@0@/generate_core_keys.py'.format(meson.current_source_dir()),
     '@0@/src/grl-metadata-key.h'.format(meson.source_root()),
