build: Improve meson files
Several portability fixes to make grilo-plugins build on NixOS:

- Change option names to more idiomatic style
- Change vala option to vapi for compatibility with newer meson
- Fix path handling in pkgconfig

--- a/bindings/vala/meson.build
+++ b/bindings/vala/meson.build
@@ -5,12 +5,11 @@
 #
 # Copyright (C) 2016 Igalia S.L. All rights reserved.
 
-vapidir = join_paths([
-    prefix,
-    get_option('datadir'),
+vapidir = join_paths(
+    datadir,
     'vala',
     'vapi',
-])
+)
 
 vala_sources = [ # LIBRARY, GIR, DEPS
     ['grilo-@0@'.format(grl_majorminor), grl_gir[0], ['gmodule-2.0', 'gio-2.0']],
@@ -26,6 +25,7 @@ foreach s: vala_sources
     gnome.generate_vapi(lib,
         sources: [custom_vala, gir],
         packages: deps,
-        install: true)
+        install: true,
+        install_dir: vapidir)
 endforeach
 
