--- a/meson.build
+++ b/meson.build
@@ -46,36 +46,47 @@ gmodule_dep = dependency('gmodule-2.0', version: glib2_required_info, required: 
 gobject_dep = dependency('gobject-2.0', version: glib2_required_info, required: true)
 libxml_dep = dependency('libxml-2.0', required: true)
 
-enable_grlnet = get_option('enable-grl-net')
+enable_grlnet = get_option('grl_net')
 if enable_grlnet
     libsoup_dep = dependency('libsoup-2.4', version: '>= 2.41.3', required: true)
 endif
 
-enable_grlpls = get_option('enable-grl-pls')
+enable_grlpls = get_option('grl_pls')
 if enable_grlpls
     totem_plparser_dep = dependency('totem-plparser', version: '>= 3.4.1', required: true)
 endif
 
-enable_gir = get_option('enable-introspection') or get_option('enable-vala')
+enable_gir = get_option('introspection') or get_option('vapi')
 if enable_gir
    find_program('g-ir-scanner', required: true)
 endif
 
-enable_vala = get_option('enable-vala')
+enable_vala = get_option('vapi')
 if enable_vala
     vapigen = find_program('vapigen', required: true)
 endif
 
-enable_testui = get_option('enable-test-ui')
+enable_testui = get_option('test_ui')
 if enable_testui
     gtk_dep = dependency('gtk+-3.0', version: '>= 3.14', required: true)
     oauth_dep = dependency('oauth', required: false)
 endif
 
 prefix = get_option('prefix')
+includedir = join_paths(prefix, get_option('includedir'))
 libdir = join_paths(prefix, get_option('libdir'))
 plugins_dir = join_paths(libdir, grl_name)
 localedir = join_paths(prefix, get_option('localedir'))
+datadir = join_paths(prefix, get_option('datadir'))
+
+gobject_introspection = dependency('gobject-introspection-1.0', required: false)
+if gobject_introspection.found()
+    girdir = gobject_introspection.get_pkgconfig_variable('girdir', define_variable: ['datadir', datadir])
+    typelibdir = gobject_introspection.get_pkgconfig_variable('typelibdir', define_variable: ['libdir', libdir])
+else
+    girdir = join_paths(datadir, 'gir-1.0')
+    typelibdir = join_paths(libdir, 'girepository-1.0')
+endif
 
 cdata = configuration_data()
 cdata.set_quoted('VERSION', grilo_version)
@@ -99,11 +110,11 @@ pkgconf = configuration_data()
 pkgconf.set('prefix', prefix)
 pkgconf.set('exec_prefix', '${prefix}')
 pkgconf.set('libdir', libdir)
-pkgconf.set('includedir', '${prefix}/@0@'.format(get_option('includedir')))
+pkgconf.set('includedir', join_paths('${prefix}', includedir))
 pkgconf.set('GRL_NAME', grl_name)
 pkgconf.set('GRL_PLUGINS_DIR', plugins_dir)
-pkgconf.set('INTROSPECTION_GIRDIR', '${datarootdir}/gir-1.0')
-pkgconf.set('INTROSPECTION_TYPELIBDIR', '${libdir}/girepository-1.0'.format(get_option('libdir')))
+pkgconf.set('INTROSPECTION_GIRDIR', join_paths('${prefix}', girdir))
+pkgconf.set('INTROSPECTION_TYPELIBDIR', join_paths('${prefix}', typelibdir))
 pkgconf.set('VERSION', grilo_version)
 pkgconf.set('GRLNET_VERSION', grlnet_version)
 pkgconf.set('GRLPLS_VERSION', grlpls_version)
@@ -114,7 +125,7 @@ foreach p: pkgconfig_files
     configure_file(input: infile,
         output: outfile,
         configuration: pkgconf,
-        install_dir: '@0@/pkgconfig'.format(get_option('libdir')))
+        install_dir: join_paths(libdir, 'pkgconfig'))
 endforeach
 
 gnome = import('gnome')
