--- a/meson_options.txt
+++ b/meson_options.txt
@@ -1,6 +1,6 @@
-option('enable-grl-net', type: 'boolean', value: true, description: 'Enable Grilo Net library')
-option('enable-grl-pls', type: 'boolean', value: true, description: 'Enable Grilo Pls library')
-option('enable-gtk-doc', type: 'boolean', value: false, description: 'Enable generating the API reference')
-option('enable-introspection', type: 'boolean', value: true, description: 'Enable GObject Introspection')
-option('enable-test-ui', type: 'boolean', value: true, description: 'Build Test UI')
-option('enable-vala', type: 'boolean', value: true, description: 'Enable Vala (enables GObject Introspection)')
+option('grl_net', type: 'boolean', value: true, description: 'Enable Grilo Net library')
+option('grl_pls', type: 'boolean', value: true, description: 'Enable Grilo Pls library')
+option('gtk_doc', type: 'boolean', value: false, description: 'Enable generating the API reference')
+option('introspection', type: 'boolean', value: true, description: 'Enable GObject Introspection')
+option('test_ui', type: 'boolean', value: true, description: 'Build Test UI')
+option('vapi', type: 'boolean', value: true, description: 'Enable Vala (enables GObject Introspection)')
