doc: Ignore private headers

--- a/doc/grilo/meson.build
+++ b/doc/grilo/meson.build
@@ -9,6 +9,17 @@ types = configure_file(input : 'grilo.types',
   output : 'grilo.types',
   configuration : configuration_data())
 
+private_headers = [
+  'grl-sync-priv.h',
+  'grl-sync-priv.h',
+  'grl-log-priv.h',
+  'grl-metadata-key-priv.h',
+  'grl-registry-priv.h',
+  'grl-plugin-priv.h',
+  'grl-operation-priv.h',
+  'grl-operation-options-priv.h',
+]
+
 gnome.gtkdoc('grilo',
     main_sgml: 'grilo-docs.sgml',
     src_dir: [
@@ -18,6 +29,7 @@ gnome.gtkdoc('grilo',
     dependencies: libgrl_dep,
     gobject_typesfile: types,
     install: true,
+    scan_args: '--ignore-headers=' + ' '.join(private_headers),
     content_files: [
         'environment-setup.xml',
         'plugins-sources.xml',
