--- a/libs/pls/meson.build
+++ b/libs/pls/meson.build
@@ -37,10 +37,10 @@ grlpls_pc = pkgconfig.generate(libgrlpls,
     version: grlpls_version,
     variables: [
         'exec_prefix=${prefix}',
-        'datarootdir=' + join_paths('${prefix}', datadir),
+        'datarootdir=' + datadir_for_pc_file,
         'datadir=${datarootdir}',
-        'girdir=' + girdir,
-        'typelibdir=' + typelibdir,
+        'girdir=' + girdir_for_pc_file,
+        'typelibdir=' + typelibdir_for_pc_file,
     ],
 )
 
