--- a/meson.build
+++ b/meson.build
@@ -76,15 +76,22 @@ prefix = get_option('prefix')
 includedir = join_paths(prefix, get_option('includedir'))
 libdir = join_paths(prefix, get_option('libdir'))
 plugins_dir = join_paths(libdir, grl_name)
+plugins_dir_for_pc_file = join_paths('${libdir}', grl_name)
 localedir = join_paths(prefix, get_option('localedir'))
-datadir = join_paths(prefix, get_option('datadir'))
+datadir_unprefixed = get_option('datadir')
+datadir = join_paths(prefix, datadir_unprefixed)
+datadir_for_pc_file = join_paths('${prefix}', datadir_unprefixed)
 
 girdir = join_paths(datadir, 'gir-1.0')
+girdir_for_pc_file = join_paths('${datadir}', 'gir-1.0')
 typelibdir = join_paths(libdir, 'girepository-1.0')
+typelibdir_for_pc_file = join_paths('${libdir}', 'girepository-1.0')
 gobject_introspection = dependency('gobject-introspection-1.0', required: false)
 if gobject_introspection.found()
     girdir = gobject_introspection.get_pkgconfig_variable('girdir', define_variable: ['datadir', datadir])
+    girdir_for_pc_file = gobject_introspection.get_pkgconfig_variable('girdir', define_variable: ['datadir', '${datadir}'])
     typelibdir = gobject_introspection.get_pkgconfig_variable('typelibdir', define_variable: ['libdir', libdir])
+    typelibdir_for_pc_file = gobject_introspection.get_pkgconfig_variable('typelibdir', define_variable: ['libdir', '${libdir}'])
 endif
 
 vapidir = join_paths(datadir, 'vala', 'vapi')
