build: Avoid using meson.source_root()
The value of meson.source_root() can't be trusted because if we are
embedded via subproject() into a larger project, the source root will
be that of the parent project.

Instead, use a variable to keep track of the toplevel source directory.

--- a/doc/grilo/meson.build
+++ b/doc/grilo/meson.build
@@ -23,8 +23,8 @@ private_headers = [
 gnome.gtkdoc('grilo',
     main_sgml: 'grilo-docs.sgml',
     src_dir: [
-        join_paths(meson.source_root(), 'src'),
-        join_paths(meson.source_root(), 'libs'),
+        join_paths(source_root, 'src'),
+        join_paths(source_root, 'libs'),
     ],
     dependencies: libgrl_dep,
     gobject_typesfile: types,
@@ -37,10 +37,10 @@ gnome.gtkdoc('grilo',
         'quick-start.xml',
         'writing-apps.xml',
         'overview.xml',
-        join_paths(meson.source_root(), 'examples', 'configuring-plugins.c'),
-        join_paths(meson.source_root(), 'examples', 'browsing.c'),
-        join_paths(meson.source_root(), 'examples', 'searching.c'),
-        join_paths(meson.source_root(), 'examples', 'multivalues.c'),
-        join_paths(meson.source_root(), 'examples', 'efficient-metadata-resolution.c'),
+        join_paths(source_root, 'examples', 'configuring-plugins.c'),
+        join_paths(source_root, 'examples', 'browsing.c'),
+        join_paths(source_root, 'examples', 'searching.c'),
+        join_paths(source_root, 'examples', 'multivalues.c'),
+        join_paths(source_root, 'examples', 'efficient-metadata-resolution.c'),
     ]
 )
