--- a/tools/grilo-inspect/meson.build
+++ b/tools/grilo-inspect/meson.build
@@ -14,7 +14,7 @@ if not python.found()
 endif
 run_command(python,
     '@0@/generate_core_keys.py'.format(meson.current_source_dir()),
-    '@0@/src/grl-metadata-key.h'.format(meson.source_root()),
+    '@0@/src/grl-metadata-key.h'.format(source_root),
     '@0@/grl-core-keys.h'.format(meson.current_build_dir()))
 
 configure_file(output: 'config.h',
